feat: 交互接口实现（B4）
